# Sentinel-Agentic-RAG

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  evals.yml
backend/app/: config.py  main.py
backend/app/agents/: budget.py  critic.py  graph.py  repair.py  retriever.py  router.py  state.py  synthesizer.py
backend/app/api/: routes_health.py  routes_ingest.py  routes_query.py  routes_traces.py
backend/app/guardrails/: auth.py  cost_governor.py  grounding.py  injection.py  input_validation.py  pii.py  quota.py
backend/app/llm/: groq_client.py
backend/app/models/: schemas.py
backend/app/observability/: logging.py  tracing.py
backend/app/rag/: bm25_store.py  chunking.py  embeddings.py  faiss_store.py  ingest_runtime.py
backend/ingestion/: ingest.py
backend/scripts/: demo_api.py  demo_graph.py  demo_repair.py  export_onnx.py
backend/tests/: test_chunking.py  test_graph.py  test_grounding.py  test_guardrails.py
docker/: Dockerfile.lambda  requirements-lambda.txt
docs/: onboarding-guide.md  refund-policy.md
evals/: golden_dataset.json  judge_prompts.py  report.md  run.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AnswerPanel.tsx  CitationDrawer.tsx  QueryBox.tsx  (+3 more)
infra/: aws_setup.md  cloudfront-config.json  ddb-quotas.json  ddb-traces.json  ddb-users.json  ecr-lifecycle.json  frontend-bucket-policy.json  s3-cors.json  s3-lifecycle.json  seed_users.py
infra/iam/: lambda-policy.json
